--- a/exampleSite/data/en/homepage.yml
+++ b/exampleSite/data/en/homepage.yml
@@ -6,7 +6,7 @@ banner:
   image : "images/watch.png"
   button:
    enable : true
-   label : "Browse All Our Hosting Options"
+   label : "Browse All Products"
    link : "products"
 
 ############################# Feature ############################
@@ -83,7 +83,7 @@ about_product:
 #################################### Products ########################
 products:
   enable : true
-  title : "Checkout Our All Hosting Options"
+  title : "Checkout Our Productss"
 
 
 ################################## Subscription ###################
