--- a/exampleSite/data/en/homepage.yml
+++ b/exampleSite/data/en/homepage.yml
@@ -18,7 +18,7 @@ features:
   # feature at the left of the image
   left_side:
     # feature item loop
-  - title : "Extensive User Training Smooth Touch"
+  - title : "Extensive User Training"
     icon : "tf-ion-ios-alarm-outline"
     content : "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem, inventore?"
     
@@ -35,7 +35,7 @@ features:
   # feature at the right of the image
   right_side:
     # feature item loop
-  - title : "Extensive User Training Smooth Touch"
+  - title : "Extensive User Training Smooth"
     icon : "tf-ion-ios-alarm-outline"
     content : "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem, inventore?"
 
